--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-  <script src="flutter_bootstrap.js?v=1.2" async></script>
+  <script src="flutter_bootstrap.js?v=2.1" defer></script>
 </body>
 
 </html>
