--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="./">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-  <script src="flutter_bootstrap.js?v=2.9" defer></script>
+  <script src="flutter_bootstrap.js?v=3.0" defer></script>
 </body>
 
 </html>
